# AlgorithmFinalWork

./: .gitignore  CMakeLists.txt  README.md  cxx_features.md
include/: Algorithms.h  BenchMark.h  DataBase.h  DataController.h  Initializer.h  Tests.h  Timer.h
src/: AlgorithmUtils.cpp  Algorithms.cpp  BenchMark.cpp  DataBase.cpp  DataController.cpp  Initializer.cpp  Tests.cpp  Timer.cpp  main.cpp
